--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "backend",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "build": "tsc",
     "start": "cross-env NODE_ENV=production node build/index.js",
