--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.1",
   "description": "",
   "main": "index.ts",
+  "engines": {
+    "node": "15.x"
+  },
   "scripts": {
     "build": "tsc",
     "start": "cross-env NODE_ENV=production node build/index.js",
